--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@koumoul/sd-express": "^0.19.1",
     "@koumoul/sd-vue": "^0.19.0",
     "@koumoul/v-iframe": "^0.2.3",
+    "@koumoul/vjsf": "^1.15.0",
     "@koumoul/vue-multianalytics": "^1.10.1",
     "@mdi/font": "^5.6.55",
     "@nuxtjs/axios": "^5.12.2",
