--- a/contract/config.json
+++ b/contract/config.json
@@ -9,6 +9,35 @@
     }
   },
   "allOf": [{
+    "title": "Propriétaire du portail",
+    "properties": {
+      "owner": {
+        "type": "object",
+        "additionalProperties": false,
+        "required": ["type", "id"],
+        "properties": {
+          "type": {
+            "type": "string",
+            "enum": ["user", "organization"],
+            "description": "If the owner is a user or an organization",
+            "const": "organization"
+          },
+          "id": {
+            "type": "string",
+            "description": "The unique id of the user or organization"
+          },
+          "name": {
+            "type": "string",
+            "description": "The display name of the user or organization"
+          }
+        },
+        "x-fromUrl": "{context.directoryUrl}/api/organizations?q={q}&size=1000",
+        "x-itemsProp": "results",
+        "x-itemTitle": "name",
+        "x-itemKey": "id"
+      }
+    }
+  }, {
     "title": "Présentation",
     "required": ["themeColor", "footerColor"],
     "properties": {
@@ -44,7 +73,7 @@
       "featuredReuse": {
         "title": "Visualisation mise en avant",
         "type": "object",
-        "x-fromUrl": "{context.dataFairUrl}/api/v1/applications?q={q}&select=id,title&owner={context.owner}&size=1000",
+        "x-fromUrl": "{context.dataFairUrl}/api/v1/applications?q={q}&owner=organization:{context.owner}&size=1000",
         "x-itemsProp": "results",
         "x-itemTitle": "title",
         "x-itemKey": "href",
