--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "dependencies": {
     "@hackmd/meta-marked": "^0.4.4",
     "@koumoul/nuxt-config-inject": "^0.4.7",
-    "@koumoul/sd-express": "^0.19.1",
-    "@koumoul/sd-vue": "^0.19.0",
+    "@koumoul/sd-express": "^0.19.2",
+    "@koumoul/sd-vue": "^0.20.1",
     "@koumoul/v-iframe": "^0.2.3",
     "@koumoul/vjsf": "^1.15.0",
     "@koumoul/vue-multianalytics": "^1.10.1",
@@ -44,8 +44,10 @@
     "mobile-device-detect": "^0.2.3",
     "moment": "^2.29.1",
     "mongodb": "^3.3.2",
+    "multer": "^1.4.2",
     "nuxt": "^2.14.7",
     "scrolling-element": "^1.0.2",
+    "shortid": "^2.2.16",
     "slugify": "^1.4.6",
     "tinycolor2": "^1.4.2",
     "vue-clamp": "^0.3.1",
