feat: better looking config page

--- a/contract/config.json
+++ b/contract/config.json
@@ -1,11 +1,11 @@
 {
   "type": "object",
-  "x-display": "tabs",
+  "x-display": "expansion-panels",
   "x-options": {
     "expansionPanelsProps": {
       "multiple": true,
       "accordion": true,
-      "value": [0, 1, 2, 3]
+      "value": [0]
     }
   },
   "allOf": [{
