feat: breadcrumb for portals edit

--- a/package.json
+++ b/package.json
@@ -23,39 +23,40 @@
   "homepage": "https://gitlab.com/koumoul/portal-standard#readme",
   "dependencies": {
     "@hackmd/meta-marked": "^0.4.4",
-    "@koumoul/nuxt-config-inject": "^0.4.7",
+    "@koumoul/nuxt-config-inject": "^0.4.9",
     "@koumoul/sd-express": "^0.19.2",
     "@koumoul/sd-vue": "^0.20.1",
     "@koumoul/v-iframe": "^0.2.3",
     "@koumoul/vjsf": "^1.18.0",
     "@koumoul/vue-multianalytics": "^1.10.1",
-    "@mdi/font": "^5.6.55",
-    "@nuxtjs/axios": "^5.12.2",
+    "@mdi/font": "^5.8.55",
+    "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/vuetify": "^1.11.2",
     "ajv": "^6.12.6",
-    "config": "^3.3.2",
+    "config": "^3.3.3",
     "cookie-parser": "^1.4.5",
     "cookie-universal-nuxt": "^2.1.4",
     "debounce": "^1.2.0",
     "event-to-promise": "^0.8.0",
-    "express-fileupload": "^1.2.0",
+    "express-fileupload": "^1.2.1",
     "fs-extra": "^8.0.1",
     "iframe-resizer": "4.0.4",
     "js-cookie": "^2.2.0",
+    "json-schema-defaults": "^0.4.0",
     "mobile-device-detect": "^0.2.3",
     "moment": "^2.29.1",
-    "mongodb": "^3.3.2",
+    "mongodb": "^3.6.3",
     "multer": "^1.4.2",
-    "nuxt": "^2.14.7",
+    "nuxt": "^2.14.12",
     "scrolling-element": "^1.0.2",
     "shortid": "^2.2.16",
     "slugify": "^1.4.6",
     "tinycolor2": "^1.4.2",
     "vue-clamp": "^0.3.1",
     "vue-moment": "^4.0.0",
-    "vue-social-sharing": "^3.0.2",
+    "vue-social-sharing": "^3.0.4",
     "vue-window-size": "0.6.2",
-    "vuetify": "^2.3.15"
+    "vuetify": "^2.4.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -64,12 +65,12 @@
     "eslint-config-standard": "^14.1.1",
     "eslint-config-vuetify": "^0.6.1",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-html": "^6.1.0",
+    "eslint-plugin-html": "^6.1.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-no-only-tests": "^2.4.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.2",
+    "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^6.2.2",
     "eslint-plugin-vuetify": "^1.0.0-beta.7",
     "http-proxy-middleware": "^1.0.6",
