--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mongodb": "^3.6.3",
     "multer": "^1.4.2",
     "nuxt": "^2.14.12",
+    "reconnecting-websocket": "^4.4.0",
     "scrolling-element": "^1.0.2",
     "shortid": "^2.2.16",
     "slugify": "^1.4.6",
