--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "fs-extra": "^8.0.1",
     "iframe-resizer": "4.0.4",
     "js-cookie": "^2.2.0",
+    "js-file-download": "^0.4.12",
     "json-schema-defaults": "^0.4.0",
     "mobile-device-detect": "^0.2.3",
     "moment": "^2.29.1",
