--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "moment": "^2.29.1",
     "mongodb": "^3.6.3",
     "multer": "^1.4.2",
+    "nodemon": "^1.19.3",
     "nuxt": "^2.14.12",
     "reconnecting-websocket": "^4.4.0",
     "scrolling-element": "^1.0.2",
@@ -75,7 +76,6 @@
     "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^6.2.2",
     "eslint-plugin-vuetify": "^1.0.0-beta.7",
-    "http-proxy-middleware": "^1.0.6",
-    "nodemon": "^1.19.3"
+    "http-proxy-middleware": "^1.0.6"
   }
 }
