--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@koumoul/sd-express": "^0.19.2",
     "@koumoul/sd-vue": "^0.20.1",
     "@koumoul/v-iframe": "^0.2.3",
-    "@koumoul/vjsf": "^1.22.0",
+    "@koumoul/vjsf": "^1.23.0",
     "@koumoul/vue-multianalytics": "^1.10.1",
     "@mdi/font": "^5.8.55",
     "@nuxtjs/axios": "^5.12.5",
@@ -37,6 +37,7 @@
     "cookie-parser": "^1.4.5",
     "cookie-universal-nuxt": "^2.1.4",
     "debounce": "^1.2.0",
+    "easymde": "^2.14.0",
     "event-to-promise": "^0.8.0",
     "express-fileupload": "^1.2.1",
     "fs-extra": "^8.0.1",
