fix: portal description is not required anymore

--- a/contract/config.json
+++ b/contract/config.json
@@ -70,7 +70,7 @@
     }
   }, {
     "title": "Contenu",
-    "required": ["title", "description"],
+    "required": ["title"],
     "properties": {
       "title": {
         "type": "string",
