--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@hackmd/meta-marked": "^0.4.4",
     "@koumoul/nuxt-config-inject": "^0.4.10",
-    "@koumoul/sd-express": "^0.20.0",
+    "@koumoul/sd-express": "^0.21.0",
     "@koumoul/sd-vue": "^0.20.1",
     "@koumoul/v-iframe": "^0.2.3",
     "@koumoul/vjsf": "^1.23.9",
@@ -38,6 +38,7 @@
     "cookie-universal-nuxt": "^2.1.4",
     "debounce": "^1.2.0",
     "easymde": "^2.14.0",
+    "email-validator": "^2.0.4",
     "event-to-promise": "^0.8.0",
     "express-fileupload": "^1.2.1",
     "fs-extra": "^8.0.1",
@@ -49,9 +50,12 @@
     "moment": "^2.29.1",
     "mongodb": "^3.6.4",
     "multer": "^1.4.2",
+    "nodemailer": "^6.5.0",
     "nodemon": "^1.19.3",
     "nuxt": "^2.14.12",
+    "rate-limiter-flexible": "^2.2.1",
     "reconnecting-websocket": "^4.4.0",
+    "request-ip": "^2.1.3",
     "scrolling-element": "^1.0.2",
     "shortid": "^2.2.16",
     "slugify": "^1.4.6",
