--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev-server": "NODE_ENV=development nodemon server",
     "dev-client": "NODE_ENV=development nuxt -p 3039",
-    "build": "nuxt build",
+    "build": "nuxt build && rm -rf .nuxt-standalone && cp -rf .nuxt .nuxt-standalone",
     "analyze": "nuxt build --analyze",
     "lint": "eslint --ext js,vue --ignore-path .gitignore .",
     "lint-fix": "eslint --ext js,vue --ignore-path .gitignore --fix ."
