--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@koumoul/vue-multianalytics": "^1.10.1",
     "@mdi/font": "^5.8.55",
     "@nuxtjs/axios": "^5.12.5",
+    "@nuxtjs/dayjs": "^1.4.0",
     "@nuxtjs/vuetify": "^1.11.2",
     "ajv": "^6.12.6",
     "config": "^3.3.3",
@@ -47,7 +48,6 @@
     "js-file-download": "^0.4.12",
     "json-schema-defaults": "^0.4.0",
     "mobile-device-detect": "^0.2.3",
-    "moment": "^2.29.1",
     "mongodb": "^3.6.4",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
@@ -61,7 +61,6 @@
     "slugify": "^1.4.6",
     "tinycolor2": "^1.4.2",
     "vue-clamp": "^0.4.0",
-    "vue-moment": "^4.0.0",
     "vue-social-sharing": "^3.0.4",
     "vue-tweet-embed": "^2.4.0",
     "vue-window-size": "0.6.2",
