--- a/contract/config.json
+++ b/contract/config.json
@@ -139,6 +139,25 @@
         "title": "Image principale en bannière",
         "default": false
       },
+      "homeReuse": {
+        "title": "Remplacer l'image principale par une visualisation",
+        "type": "object",
+        "x-fromUrl": "{context.dataFairUrl}/api/v1/applications?q={q}&owner={context.owner}&size=1000",
+        "x-itemsProp": "results",
+        "x-itemTitle": "title",
+        "x-itemKey": "href",
+        "properties": {
+          "href": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
+          },
+          "id": {
+            "type": "string"
+          }
+        }
+      },
       "description": {
         "type": "string",
         "maxLength": 50000,
