--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,10 @@ on:
     tags: [ 'v*.*.*' ]
   pull_request:
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,30 +27,46 @@ jobs:
     - run: npm run lint
     - run: npm run build
     # - run: npm run coveralls
+    
     - name: Docker meta
       id: docker_meta
       uses: crazy-max/ghaction-docker-meta@v1
       with:
-        images: koumoul/data-fair-portals
+        images:
+          ghcr.io/${{ github.repository }} # github packages
+          koumoul/data-fair-portals # old docker hub
         tag-semver: |
             {{version}}
             {{major}}.{{minor}}
             {{major}}
+
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
+
+    # TODO: deprecate publishing to dockerhub
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build and push
+
+    - name: Login to Github container registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build and push docker images
       id: docker_build
       uses: docker/build-push-action@v2
       with:
+        context: .
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.docker_meta.outputs.tags }}
         labels: ${{ steps.docker_meta.outputs.labels }}
+
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
