--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,9 +32,8 @@ jobs:
       id: docker_meta
       uses: crazy-max/ghaction-docker-meta@v1
       with:
-        images: |
-          ghcr.io/${{ github.repository }} # github packages
-          koumoul/data-fair-portals # old docker hub
+        images:
+          ghcr.io/${{ github.repository }} 
         tag-semver: |
             {{version}}
             {{major}}.{{minor}}
@@ -44,13 +43,6 @@ jobs:
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-
-    # TODO: deprecate publishing to dockerhub
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Login to Github container registry
       uses: docker/login-action@v1
