--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "homepage": "https://gitlab.com/data-fair/portals#readme",
   "dependencies": {
     "@koumoul/nuxt-config-inject": "^0.4.10",
-    "@koumoul/sd-express": "^0.21.0",
-    "@koumoul/sd-vue": "^0.21.2",
+    "@koumoul/sd-express": "^1.0.0",
+    "@koumoul/sd-vue": "^1.0.0",
     "@koumoul/v-iframe": "^0.4.0",
-    "@koumoul/vjsf": "^2.0.2",
+    "@koumoul/vjsf": "^2.3.0",
     "@koumoul/vue-multianalytics": "^1.10.1",
     "@mdi/font": "^5.8.55",
     "@nuxtjs/axios": "^5.12.5",
@@ -53,6 +53,7 @@
     "nodemailer": "^6.5.0",
     "nodemon": "^1.19.3",
     "nuxt": "^2.14.12",
+    "original-url": "^1.2.3",
     "rate-limiter-flexible": "^2.2.1",
     "reconnecting-websocket": "^4.4.0",
     "request-ip": "^2.1.3",
