--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "rate-limiter-flexible": "^2.2.1",
     "reconnecting-websocket": "^4.4.0",
     "request-ip": "^2.1.3",
+    "sanitize-html": "^2.5.0",
     "scrolling-element": "^1.0.2",
     "shortid": "^2.2.16",
     "slugify": "^1.4.6",
