--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,3 +62,12 @@ jobs:
 
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
+
+    - name: Send Keel notification to staging-koumoul.com
+      uses: wei/curl@v1
+      with:
+        args: '-s --fail --show-error -X POST https://keel.admin.staging-koumoul.com/v1/webhooks/native -u ${{ secret.KEEL_STAGING_USER }}:${{ secret.KEEL_STAGING_PASSWORD }} -d ''{"name": "ghcr.io/${{ github.repository }} ", "tag": "${{ steps.docker_meta.outputs.version }}"}'''
+    - name: Send Keel notification to koumoul.com
+      uses: wei/curl@v1
+      with:
+        args: '-s --fail --show-error -X POST https://keel.admin.koumoul.com/v1/webhooks/native -u ${{ secret.KEEL_PROD_USER }}:${{ secret.KEEL_PROD_PASSWORD }} -d ''{"name": "ghcr.io/${{ github.repository }} ", "tag": "${{ steps.docker_meta.outputs.version }}"}'''
