--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "slugify": "^1.4.6",
     "tinycolor2": "^1.4.2",
     "vue-clamp": "^0.4.0",
+    "vue-sanitize": "^0.2.1",
     "vue-social-sharing": "^3.0.4",
     "vue-tweet-embed": "^2.4.0",
     "vue-window-size": "0.6.2",
