--- a/contract/config.json
+++ b/contract/config.json
@@ -106,8 +106,93 @@
         "title": "Couleur du pied de page",
         "x-display": "color-picker"
       },
+      "footerSocial": {
+        "type": "boolean",
+        "default": true,
+        "title": "Montrer les liens de réseaux sociaux dans le pied de page"
+      },
+      "footerCopyrightAsLogo": {
+        "type": "boolean",
+        "default": false,
+        "title": "Masquer le copyright du bas de page et le remplacer par un logo"
+      },
+      "footerLogo": {
+        "type": "boolean",
+        "title": "Afficher le logo principal dans le pied de page"
+      },
+      "footerLinksMode": {
+        "type": "string",
+        "default": "columns",
+        "title": "Mode d'affichage des liens",
+        "oneOf": [
+          {"title": "en colonnes", "const": "columns"},
+          {"title": "en lignes", "const": "lines"}
+        ]
+      },
+      "footerExtraLogos": {
+        "type": "array",
+        "title": "Logos supplémentaires",
+        "items": {
+          "type": "object",
+          "properties": {
+            "src": {"type": "string", "title": "URL de l'image"},
+            "title": {"type": "string", "title": "intitulé"},
+            "href": {"type": "string", "title": "URL du lien"}
+          }
+        }
+      },
       "footerLinks": {
-        "title": "Liens en pied de page",
+        "title": "Liens",
+        "type" : "array",
+        "items": {
+          "type": "object",
+          "oneOf": [{
+            "title": "Page du portail",
+            "properties": {
+              "type": {
+                "const": "internal"
+              },
+              "page":{
+                "title": "Page",
+                "type": "object",
+                "x-fromUrl": "{context.portalUrl}/pages?size=1000",
+                "x-itemsProp": "results",
+                "x-itemTitle": "title",
+                "x-itemKey": "id",
+                "properties": {
+                  "title": {
+                    "type": "string"
+                  },
+                  "id": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          },{
+            "title": "Lien externe",
+            "properties": {
+              "type": {
+                "const": "external"
+              },
+              "title": {
+                "title": "Libellé du lien",
+                "type": "string"
+              },
+              "href": {
+                "title": "URL",
+                "type": "string"
+              }
+            }
+          }],
+          "default": {
+            "type": "internal"
+          }
+        },
+        "default": []
+      },
+      "footerImportantLinks": {
+        "title": "Liens importants",
         "type" : "array",
         "items": {
           "type": "object",
