fix: broken date formatting

--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "@koumoul/vue-multianalytics": "^1.11.3",
     "@mdi/font": "^5.8.55",
     "@nuxtjs/axios": "^5.12.5",
-    "@nuxtjs/dayjs": "^1.4.0",
     "@nuxtjs/vuetify": "^1.11.2",
     "ajv": "^6.12.6",
     "config": "^3.3.3",
     "cookie-parser": "^1.4.5",
     "cookie-universal-nuxt": "^2.1.5",
+    "dayjs": "^1.10.7",
     "debounce": "^1.2.0",
     "easymde": "^2.14.0",
     "email-validator": "^2.0.4",
