--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "js-file-download": "^0.4.12",
     "json-schema-defaults": "^0.4.0",
     "marked": "^0.6.3",
+    "memoizee": "^0.4.15",
     "mobile-device-detect": "^0.2.3",
     "mongodb": "^3.6.4",
     "multer": "^1.4.2",
