--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,48 +13,20 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [12.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
-    - run: echo $GITHUB_REF
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-
-    - name: Cache node modules
-      uses: actions/cache@v2
-      env:
-        cache-name: cache-node-modules
-      with:
-        # npm cache files are stored in `~/.npm` on Linux/macOS
-        path: ~/.npm
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
-
-    - run: npm i
-    - run: npm run lint
-    # - run: npm run build
-    # - run: npm run coveralls
+    - name: Checkout git repository
+      uses: actions/checkout@v2
     
-    - name: Docker meta
+    - name: Prepare docker image tags
       id: docker_meta
       uses: crazy-max/ghaction-docker-meta@v1
       with:
-        images:
-          ghcr.io/${{ github.repository }} 
+        images: ghcr.io/${{ github.repository }} 
         tag-semver: |
             {{version}}
             {{major}}.{{minor}}
             {{major}}
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
@@ -64,6 +36,11 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Prepare BUILD.json
+      run: |
+        echo '{"version": "${{github.ref_name}}", "repository": "${{github.server_url}}/${{github.repository}}", "commit": "${{github.sha}}"}' > BUILD.json
+        cat BUILD.json
 
     - name: Build and push docker images
       id: docker_build
