--- a/package.json
+++ b/package.json
@@ -16,7 +16,30 @@
     "url": "git+ssh://git@gitlab.com/data-fair/portals.git"
   },
   "author": "",
-  "license": "MIT",
+  "license": "AGPL-3.0-only",
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "plugins": [
+      "no-only-tests"
+    ],
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended",
+      "standard",
+      "plugin:vue/recommended"
+    ],
+    "rules": {
+      "vue/no-v-html": "off",
+      "vue/multi-word-component-names": "off",
+      "node/no-deprecated-api": "off",
+      "vue/no-mutating-props": "off",
+      "vue/require-prop-types": "off",
+      "vue/no-useless-template-attributes": "off"
+    }
+  },
   "bugs": {
     "url": "https://gitlab.com/data-fair/portals/issues"
   },
@@ -24,58 +47,65 @@
   "dependencies": {
     "@koumoul/nuxt-config-inject": "^0.4.10",
     "@koumoul/sd-express": "^1.0.0",
-    "@koumoul/sd-vue": "^1.2.0",
-    "@koumoul/v-iframe": "^0.9.0",
-    "@koumoul/vjsf": "^2.11.3",
-    "@koumoul/vue-multianalytics": "^1.11.3",
-    "@mdi/font": "^5.8.55",
     "@nuxtjs/axios": "^5.12.5",
-    "@nuxtjs/vuetify": "^1.11.2",
     "ajv": "^6.12.6",
     "config": "^3.3.3",
     "cookie-parser": "^1.4.5",
     "cookie-universal-nuxt": "^2.1.5",
     "dayjs": "^1.10.7",
     "debounce": "^1.2.0",
-    "easymde": "^2.14.0",
     "email-validator": "^2.0.4",
     "event-to-promise": "^0.8.0",
     "express-fileupload": "^1.2.1",
     "fs-extra": "^8.0.1",
-    "iframe-resizer": "4.0.4",
-    "js-cookie": "^2.2.0",
-    "js-file-download": "^0.4.12",
     "json-schema-defaults": "^0.4.0",
     "marked": "^0.6.3",
     "memoizee": "^0.4.15",
-    "mobile-device-detect": "^0.2.3",
     "mongodb": "^3.6.4",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "nodemon": "^1.19.3",
-    "nuxt": "^2.14.12",
+    "nuxt-start": "^2.15.8",
     "original-url": "^1.2.3",
     "rate-limiter-flexible": "^2.2.1",
     "reconnecting-websocket": "^4.4.0",
     "request-ip": "^2.1.3",
+    "run": "^1.4.0",
     "sanitize-html": "^2.5.0",
-    "scrolling-element": "^1.0.2",
     "shortid": "^2.2.16",
-    "slugify": "^1.4.6",
+    "slugify": "^1.4.6"
+  },
+  "devDependencies": {
+    "@koumoul/sd-vue": "^1.2.0",
+    "@koumoul/v-iframe": "^0.9.0",
+    "@koumoul/vjsf": "^2.11.3",
+    "@koumoul/vue-multianalytics": "^1.11.3",
+    "@mdi/font": "^6.5.95",
+    "@nuxtjs/google-fonts": "^1.3.0",
+    "@nuxtjs/vuetify": "^1.12.3",
+    "clean-modules": "^2.0.4",
+    "cors": "^2.8.5",
+    "easymde": "^2.14.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-no-only-tests": "^2.6.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-vue": "^8.5.0",
+    "http-proxy-middleware": "^1.0.6",
+    "iframe-resizer": "4.0.4",
+    "js-cookie": "^2.2.0",
+    "js-file-download": "^0.4.12",
+    "mobile-device-detect": "^0.2.3",
+    "nuxt": "^2.15.8",
+    "nuxt-webpack-optimisations": "^2.2.0",
+    "scrolling-element": "^1.0.2",
     "tinycolor2": "^1.4.2",
     "vue-clamp": "^0.4.0",
     "vue-sanitize": "^0.2.1",
     "vue-social-sharing": "^3.0.4",
     "vue-tweet-embed": "^2.4.0",
-    "vue-window-size": "0.6.2",
-    "vuetify": "^2.4.2"
-  },
-  "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "cors": "^2.8.5",
-    "eslint": "^7.27.0",
-    "eslint-config-vuetify": "^0.6.1",
-    "eslint-plugin-no-only-tests": "^2.6.0",
-    "http-proxy-middleware": "^1.0.6"
+    "vue-window-size": "0.6.2"
   }
 }
