--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "run": "^1.4.0",
     "sanitize-html": "^2.5.0",
     "shortid": "^2.2.16",
-    "slugify": "^1.4.6"
+    "slugify": "^1.4.6",
+    "vue-social-sharing": "^3.0.4"
   },
   "devDependencies": {
     "@koumoul/sd-vue": "^1.2.0",
@@ -104,7 +105,6 @@
     "tinycolor2": "^1.4.2",
     "vue-clamp": "^0.4.0",
     "vue-sanitize": "^0.2.1",
-    "vue-social-sharing": "^3.0.4",
     "vue-tweet-embed": "^2.4.0",
     "vue-window-size": "0.6.2"
   }
