--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,5 +3,5 @@
     "module": "commonjs",
     "target": "es6"
   },
-  "exclude": ["node_modules", "nuxt-dist", "dist", "data", ".nyc_output", ".nuxt", ".github", "i18n", "patches"]
+  "exclude": ["node_modules", "nuxt-dist", "dist", "data", ".nyc_output", "nuxt-dist-standalone", ".github", "i18n", "patches"]
 }
