--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "scrolling-element": "^1.0.2",
     "tinycolor2": "^1.4.2",
     "vue-clamp": "^0.4.0",
+    "vue-observe-visibility": "^1.0.0",
     "vue-tweet-embed": "^2.4.0",
     "vue-window-size": "0.6.2"
   }
