--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
   "devDependencies": {
     "@koumoul/sd-vue": "^1.2.0",
     "@koumoul/v-iframe": "^0.10.0",
-    "@koumoul/vjsf": "2.12.0-beta.15",
+    "@koumoul/vjsf": "2.13.0",
     "@koumoul/vue-multianalytics": "^1.11.3",
     "@mdi/font": "^6.5.95",
     "@nuxtjs/google-fonts": "^1.3.0",
