--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - NUXT_BUILD_BLOCKING=false
       - NO_UI=${NO_UI}
       - ROLES_DEFAULTS=["admin", "contrib", "user"]
+      - PROMETHEUS_ACTIVE=false
     volumes:
       - ./test/resources/users.json:/webapp/data/users.json
       - ./test/resources/organizations.json:/webapp/data/organizations.json
@@ -32,6 +33,7 @@ services:
       - WS_PUBLIC_URL=ws://localhost:6200/data-fair
       - EXTRA_NAV_ITEMS=[{"id":"portal","iframe":"http://localhost:6200/manager/portals","icon":"mdi-presentation","title":"Portail de données"}]
       # - EXTRA_NAV_ITEMS='[{"id": "processings","can":"contrib", "iframe": "https://staging-koumoul.com/s/data-fair-processings/embed/processings", "icon": "mdi-cog-transfer-outline", "title": "Traitements périodiques"},{"id": "portal","href": "https://data.staging-koumoul.com", "icon": "mdi-presentation", "title": "Portail de données"}]'
+      - PROMETHEUS_ACTIVE=false
 
   notify:
     image: ghcr.io/data-fair/notify:master
@@ -42,6 +44,7 @@ services:
       - DIRECTORY_URL=http://localhost:6200/simple-directory
       - SECRET_NOTIFICATIONS=secret-notifications
       - SECRET_SENDMAILS=secret-sendmails
+      - PROMETHEUS_ACTIVE=false
 
   elasticsearch:
     image: ghcr.io/data-fair/elasticsearch:7.17.1
