--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "json-schema-defaults": "^0.4.0",
     "marked": "^0.6.3",
     "memoizee": "^0.4.15",
+    "mime-types": "^2.1.35",
     "mongodb": "^3.6.4",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
