--- a/contract/config.json
+++ b/contract/config.json
@@ -53,6 +53,9 @@
             "properties": {
               "name": {
                 "type": "string"
+              },
+              "hash": {
+                "type": "string"
               }
             }
           },
