--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "event-to-promise": "^0.8.0",
     "express-fileupload": "^1.2.1",
     "fs-extra": "^8.0.1",
+    "hasha": "^5.2.2",
     "json-schema-defaults": "^0.4.0",
     "marked": "^0.6.3",
     "memoizee": "^0.4.15",
@@ -76,6 +77,7 @@
     "request-ip": "^2.1.3",
     "run": "^1.4.0",
     "sanitize-html": "^2.5.0",
+    "sharp": "^0.30.7",
     "shortid": "^2.2.16",
     "slugify": "^1.4.6",
     "vue-social-sharing": "^3.0.4"
